FIX: usage of gap rather than margin-top among the cards

--- a/src/components/Time/Time.css
+++ b/src/components/Time/Time.css
@@ -11,8 +11,8 @@
 }
 
 .time .colaboradores {
-    margin-top: 32px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    row-gap: 40px;
 }
